src/css/index.css
:root {
	--body-background-color: #B0B0B0 ;
	--foreground-color: #000000 ;
	--background-color: #FFFFFF ;
}

body {
	background-color:var(--body-background-color);
    font-family: sans-serif;
    overflow: hidden;
    padding:0;
    margin:0;
}
.instContainer {
	position:absolute; 
	width:200px;
	height:200px;
}

.instControls{
	background-color:var(--background-color);
	position:absolute; 
	left:0px; 
	border:4px solid black;
	border-radius:50%;
	width:200px;
	height:200px;
	padding:0px;
	margin:50px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	/*box-shadow: 0px 10px 10px black;*/
	z-index:10;

}
.dropShadow7 {
	content: "";
	border:none;	
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 0;
	box-shadow: 0px 7px 7px black;
}
.instController{
	background-color:var(--background-color);
	position:absolute; 
	left:0px; 
	border:2px outset gray;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}
.instExtender{
	background-color:var(--background-color);
	position:absolute; 
	left:0px; 
	border-radius:0 50% 50% 0;
	padding:0px;
	margin:125px 0px 0px 240px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	z-index:8;
	box-shadow: 0px 5px 5px black;
}
.transformAnimator {
	-webkit-transition: transform 1s, clip-path 1s;
	-moz-transition: transform 1s, clip-path 1s;
	-ms-transition: transform 1s, clip-path 1s;
	-o-transition: transform 1s, clip-path 1s;
	transition: transform 1s, clip-path 1s;
}
.instVis {
	position:absolute; 
	left:0px; 
	border-radius:50%;
	width:300px;
	height:300px;
	padding:0px;
	margin:0px;
	z-index:-1;
}
.extendedContainer {
	background-color:var(--background-color);
	position:absolute; 
	left:250px; 
	top:150px;
	padding:0px;
	margin:0px;
	border: 2px solid black;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	box-shadow: 0px 5px 5px black;
	z-index:9;
}
.step {
	float:left;
	border:2px solid lightgray;
	cursor:pointer;
	padding:0px;
	margin:0px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}

.playControls{
	position:absolute;
	z-index: 5;
	color: var(--foreground-color);
	background-color:var(--background-color);
	text-align: center;
	border: 2px solid var(--foreground-color);
	/*border-radius: 5px;*/
	opacity: 1.0;
	display:block;
	top:0px;
}
.halfPlayControls{
	height:25px;
	line-height:25px;
	font-size:25px;
	width:25px;
}
.playControlsHover:hover {
	background-color: var(--foreground-color);
	color: var(--background-color);
	cursor: pointer;

}

.playInstructions{
	position:absolute;
	height:20px;
	width: 50px;
	padding: 0px;
	margin: 0px;
	z-index: 4;
	color: var(--main-foreground-color);
	background-color:none;
	text-align: center;
	opacity: 1.0;
	display:block;
	font-size:12px;
	top:55px;
}
.hidden{
	visibility:hidden;
}

